# object-detecting

./: .gitignore  LICENSE  README.md
Comparison/: CMakeLists.txt  contour_matching.cpp  contour_matching_examination.cpp  examine_cm.cpp  examine_fm.cpp  examine_tm.cpp  feature_matching.cpp  feature_matching_examination.cpp  template_matching.cpp  template_matching_examination.cpp
Comparison/include/: contour_matching.hpp  contour_matching_examination.hpp  examination.hpp  feature_matching.hpp  feature_matching_examination.hpp  method.hpp  template_matching.hpp  template_matching_examination.hpp
Generator/: CMakeLists.txt  generator.cpp
